<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@drawable/bg">

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/editbox_background"
        android:autofillHints="text" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/editbox_background"
        android:autofillHints="password" />

    <EditText
        android:id="@+id/et_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="@string/code_hint"
        android:inputType="text"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/editbox_background"
        android:autofillHints="code" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="14sp"
        android:padding="12dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:textColor="@android:color/white"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp" />

    <TextView
        android:id="@+id/tv_new_here"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="Don't have an account? Register here."
        android:textSize="12sp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textSize="14sp"
        android:padding="12dp"
        android:backgroundTint="#F2241939"
        android:textColor="@android:color/white"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp" />

</LinearLayout>