<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/background_color">
    <TextView
        android:id="@+id/tv_r_admin_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register as Admin"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"
        android:textColor="@android:color/black" />
    <EditText
        android:id="@+id/et_r_admin_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="@string/name_hint"
        android:inputType="text"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:autofillHints="name" />
    <EditText
        android:id="@+id/et_r_admin_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:autofillHints="text" />
    <EditText
        android:id="@+id/et_r_admin_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:autofillHints="emailAddress" />
    <EditText
        android:id="@+id/et_r_admin_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="phone"
        android:inputType="phone"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:autofillHints="phone" />
    <EditText
        android:id="@+id/et_r_admin_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginBottom="24dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:autofillHints="password" />
    <EditText
        android:id="@+id/et_r_admin_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="@string/confirm_pass_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginBottom="24dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:autofillHints="password" />
    <Button
        android:id="@+id/btn_r_admin_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textSize="14sp"
        android:padding="12dp"
        android:backgroundTint="#673AB7"
        android:textColor="@android:color/white"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp" />
    <TextView
        android:id="@+id/tv_r_admin_register_msg"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="Already have an account? Login here."
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/black" />
    <Button
        android:id="@+id/btn_r_admin_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="14sp"
        android:padding="12dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp" />
</LinearLayout>
